nuevo cambio estilo css

--- a/frontend/src/assets/stylesheets/Home.css
+++ b/frontend/src/assets/stylesheets/Home.css
@@ -13,7 +13,7 @@
   display: block;
 }
 .card button{
-  padding: 0.2rem;
+  padding: 0.2rem 0.5rem;
 }
 .card button:hover{
   background-color: var(--bs-light);
