--- a/frontend/src/assets/stylesheets/Home.css
+++ b/frontend/src/assets/stylesheets/Home.css
@@ -11,6 +11,7 @@
   color:var(--bs-light);
   text-decoration: none;
   display: block;
+  transition: all 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 .card button{
   padding: 0.2rem 0.5rem;
@@ -21,6 +22,13 @@
 .card button a:hover{
   color:var(--bs-blue);
 }
+#map{
+  margin: 3% auto;
+}
+
+#map h5{
+  color:var(--blue-light-2);
+}
 @media (max-width: 768px) {
   .navbar-brand {
     width: 50px;
@@ -28,9 +36,18 @@
   .card-header{
       font-size: 1rem;
   }
+  #map-location {
+    width: 360px;
+    height: 360px;
+    display: block;
+  }
 }
 @media (min-width: 769px) {
   .navbar-brand {
     width: 70px;
+  }
+  #map-location {
+    width: 500px;
+    height: 350px;
   }
 }
