--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: "Indie Flower" !important;
