--- a/frontend/src/assets/stylesheets/nav.css
+++ b/frontend/src/assets/stylesheets/nav.css
@@ -1,25 +1,24 @@
 .nav {
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    background: var(--bs-light);
-    padding: 1% 0;
-    top:-8%;
-    animation-duration: 0.3s;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  background: var(--bs-light);
+  padding: 1% 0;
+  top: -8%;
+  animation-duration: 0.3s;
 }
 
 .nav .nav-item a {
   text-decoration: none;
-  color:var(--blue-light-2)
+  color: var(--blue-light-2);
 }
 .slidein {
-  
   animation-name: slidein;
   animation-fill-mode: forwards;
 }
 .slideout {
   animation-name: slideout;
-  animation-fill-mode:backwards;
+  animation-fill-mode: backwards;
 }
 @keyframes slidein {
   from {
@@ -33,7 +32,7 @@
   }
 }
 
-@keyframes slideout{
+@keyframes slideout {
   from {
     top: 0%;
     opacity: 1;
@@ -44,27 +43,42 @@
     opacity: 0;
   }
 }
-
-@media (max-width:425px){
-  .nav{
+/* #nav-dropdown{
+  display: none;
+} */
+#link-products {
+  display: inline-flex;
+}
+#social-nav-menu {
+  list-style: none;
+  margin-bottom: 0;
+}
+@media (max-width: 768px) {
+  .nav {
     flex-direction: column;
-    align-items:center;
-    top:-21%;
+    align-items: center;
+    top: -48%;
     background: #eaeaea;
   }
-  .nav-item{
+  .nav-item {
     width: 90%;
     border-radius: 5px;
-    border:1px solid #cae4fc;
+    border: 1px solid #cae4fc;
     text-align: center;
-    margin:1% 0;
+    margin: 1% 0;
     padding: 1% 0;
     background-color: var(--bs-light);
   }
-  .nav-item a{
+  .nav-item a {
     display: block;
   }
-  .card{
-    margin-top:5%;
+  .card {
+    margin-top: 5%;
+  }
+  /* #nav-dropdown{
+  display: inline;
+} */
+  #link-products {
+    display: none;
   }
 }
