--- a/frontend/src/assets/stylesheets/products.css
+++ b/frontend/src/assets/stylesheets/products.css
@@ -7,7 +7,7 @@
 .linkNav{
     text-align: center;
     margin: 2% 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 2% 0;
     font-weight: bold;
     color: var(--blue-dark-1);
@@ -24,4 +24,11 @@
 }
 .btn-sale a:hover{
     color:var(--bs-light)!important
+}
+#img-nav-prod{
+    width: 80%;
+    padding-left: 25%;
+    box-sizing: border-box;
+    margin-top:5%;
+    display: block;
 }
