estilos y validación de formulario de login y register

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,26 +4,24 @@
 @import "../src/assets/stylesheets/about.css";
 @import "../src/assets/stylesheets/nav.css";
 @import "../src/assets/stylesheets/products.css";
+@import "../src/assets/stylesheets/forms.css";
 
 :root {
   --blue-light-1: #6fb6f8;
-  --blue-light-2:#2E92EF;
+  --blue-light-2: #2e92ef;
   --blue-dark-1: #01215c;
   --gray-1: #878585;
   --yellow-1: #f1dd3c;
   --yellow-light-1: #fffce2;
-  --yellow-light-2: #FFFBD2;
+  --yellow-light-2: #fffbd2;
 }
-img{
+img {
   max-width: 100%;
   height: auto;
 }
-.main{
+.main {
   min-height: 100vh;
   position: relative;
   overflow: hidden;
 }
-
-
-
 
