--- a/frontend/src/assets/stylesheets/nav.css
+++ b/frontend/src/assets/stylesheets/nav.css
@@ -4,13 +4,16 @@
   width: 100%;
   background: var(--bs-light);
   padding: 1% 0;
-  top: -8%;
+  top: -10%;
   animation-duration: 0.3s;
+  box-shadow: 0 3px 10px var(--bs-gray-400);
 }
 
 .nav .nav-item a {
   text-decoration: none;
   color: var(--blue-light-2);
+  font-size: 1.15rem;
+  font-weight: bold;
 }
 .slidein {
   animation-name: slidein;
@@ -43,9 +46,7 @@
     opacity: 0;
   }
 }
-/* #nav-dropdown{
-  display: none;
-} */
+
 #link-products {
   display: inline-flex;
 }
