--- a/frontend/src/assets/stylesheets/admin.css
+++ b/frontend/src/assets/stylesheets/admin.css
@@ -97,6 +97,7 @@ input[type="file"] {
     font-size: 1.5rem;
     color: var(--bs-light);
     padding: 2%;
+    width: 25%;
 }
 .admin-form-buttons button:nth-child(1){
     background-color: var(--blue-light-1);
