nueva mejora, solución de problemas en el código

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@
 @import "../src/assets/stylesheets/products.css";
 @import "../src/assets/stylesheets/forms.css";
 @import "../src/assets/stylesheets/admin.css";
+@import "../src/assets/stylesheets/contact.css";
 
 :root {
   --blue-light-1: #6fb6f8;
