--- a/frontend/src/assets/stylesheets/admin.css
+++ b/frontend/src/assets/stylesheets/admin.css
@@ -3,6 +3,12 @@
   box-shadow: 3px 5px 15px var(--bs-gray-400);
   border-radius: 10px;
 }
+.modal,
+.modal-title,
+.admin-form{
+  color: var(--blue-light-2);
+  font-weight: bold;
+}
 
 .admin-form-buttons button:nth-child(1) {
   background-color: var(--blue-light-1);
@@ -29,10 +35,13 @@
   background-color: var(--blue-light-1);
   border: none;
 }
-.modal-title {
-  font-size: 1.1rem !important;
-}
 
+.img-prod-adm{
+  border:1px solid var(--bs-gray-500);
+  border-radius: 10px;
+  padding: 2%;
+  background: var(--bs-light);
+}
 @media (min-width: 1024px) {
   .width-med {
     width: 72%!important;
